# vulkan-project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md  main.cpp  vcpkg.json
engine/: CMakeLists.txt  engine.cpp  engine.h  pch.h
engine/include/: callbacks.h  icallbacks.h
engine/include/core/: compute_pipeline.h  deletion_queue.h  descriptor_allocator_growable.h  descriptor_writer.h  descriptors.h  device.h  immedate_submit.h  mesh_loader.h  model.h  pipeline.h  pipeline_builder.h  texture.h  window.h
engine/include/gpu/: gpu_buffer.h  gpu_mesh_buffers.h  gpu_object.h  gpu_scene_data.h  gpubuffer.h
engine/include/rendering/: frame_data.h  render_graph.h  render_pass.h  renderable.h  renderer.h
engine/include/utils/: init.h  utils.h
engine/libs/slang/include/: slang-tag-version.h
engine/resources/shaders/render/: shader.slang
engine/src/core/: compute_pipeline.cpp  descriptor_allocator_growable.cpp  descriptor_writer.cpp  descriptors.cpp  device.cpp  immediate_submit.cpp  model.cpp  pipeline.cpp  pipeline_builder.cpp  texture.cpp  window.cpp
engine/src/gpu/: gpu_buffer.cpp  gpu_mesh_buffers.cpp
engine/src/rendering/: renderer.cpp
include/: engine.hpp  vk_program.hpp  vulkan_program.hpp  window.hpp
math/: CMakeLists.txt  force.h  iforce.cpp  iforce.h
resources/shaders/compute/: gradient.glsl  shader.slang
resources/shaders/render/: colored_triangle.slang  colored_triangle_mesh.slang  shader.slang  test.slang
src/: engine.cpp  main.cpp  vk_program.cpp  vulkan_program.cpp  window.cpp
